# Examen1-MNLPP

./: .gitignore  3-vtf_sarimax.ipynb  3.02-vtf_sarimax.ipynb  3.1-vtf_sarimax + VIX.ipynb  Carga de Datos.ipynb  README.md  borrador.ipynb  ex_mnlpp.ipynb  ex_mnlpp_vsofi.ipynb  main.py  predicciones_mar5_13_2026.xlsx  pyproject.toml
