[project]
name = "examen1-mnlpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "banxicoapi>=1.0.2",
    "dotenv>=0.9.9",
    "holidays>=0.92",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "statsmodels>=0.14.6",
]
